--- a/res/client/css/style.css
+++ b/res/client/css/style.css
@@ -451,10 +451,32 @@ table {
     You should have received a copy of the GNU Affero General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
+.filter-dropdown {
+  border: solid #919095;
+  border-width: 1px 1px 1px 1px;
+  cursor: pointer;
+  float: left;
+  left: 20px;
+  font-size: 12px;
+  height: 34px;
+  line-height: 36px;
+  margin-left: 10px;
+  text-align: center;
+  background: white;
+  min-width: 65px; }
+
+.filter-container {
+  left: 20px; }
+  .filter-container form {
+    display: inline; }
+
 .filter-dropdown-menu {
   z-index: 1;
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.3);
-  position: relative; }
+  top: -2px;
+  box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.3);
+  position: relative;
+  border: solid #919095;
+  border-width: 0px 1px 1px 1px; }
 
 .dropdown-item {
   padding: 6px 0px 6px 18px;
@@ -557,11 +579,6 @@ table {
     You should have received a copy of the GNU Affero General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-.filter-container {
-  left: 20px; }
-  .filter-container form {
-    display: inline; }
-
 .input-container {
   left: 20px; }
   .input-container form {
@@ -593,20 +610,6 @@ table {
   .search-bar:focus {
     border: solid #919095;
     box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.3); }
-
-.filter-dropdown {
-  border: solid #919095;
-  border-width: 1px 1px 1px 1px;
-  cursor: pointer;
-  float: left;
-  left: 20px;
-  font-size: 12px;
-  height: 34px;
-  line-height: 36px;
-  margin-left: 10px;
-  text-align: center;
-  background: white;
-  min-width: 65px; }
 
 #input-container__search {
   margin-top: 24px;
